[gd_scene load_steps=23 format=3 uid="uid://d0ecexfpobl4m"]

[ext_resource type="Script" uid="uid://1rnnvyy1byjt" path="res://story/book/dialog_button.gd" id="1_smxr3"]
[ext_resource type="Script" uid="uid://rbc1te7wgcy0" path="res://custom_nodes/control/typing_label.gd" id="2_g8jf2"]

[sub_resource type="InputEventKey" id="InputEventKey_w0yih"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_4452u"]
events = [SubResource("InputEventKey_w0yih")]

[sub_resource type="InputEventKey" id="InputEventKey_cm7mn"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_fg3ec"]
events = [SubResource("InputEventKey_cm7mn")]

[sub_resource type="InputEventKey" id="InputEventKey_67wxs"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_5aiqg"]
events = [SubResource("InputEventKey_67wxs")]

[sub_resource type="InputEventKey" id="InputEventKey_osk5w"]
device = -1
keycode = 52
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_ypkvd"]
events = [SubResource("InputEventKey_osk5w")]

[sub_resource type="InputEventKey" id="InputEventKey_gpepv"]
device = -1
keycode = 53
unicode = 53

[sub_resource type="Shortcut" id="Shortcut_o3aia"]
events = [SubResource("InputEventKey_gpepv")]

[sub_resource type="InputEventKey" id="InputEventKey_iy104"]
device = -1
keycode = 54
unicode = 54

[sub_resource type="Shortcut" id="Shortcut_jht22"]
events = [SubResource("InputEventKey_iy104")]

[sub_resource type="InputEventKey" id="InputEventKey_fxq8n"]
device = -1
keycode = 55
unicode = 55

[sub_resource type="Shortcut" id="Shortcut_2q0j8"]
events = [SubResource("InputEventKey_fxq8n")]

[sub_resource type="InputEventKey" id="InputEventKey_x4qdx"]
device = -1
keycode = 56
unicode = 56

[sub_resource type="Shortcut" id="Shortcut_giagg"]
events = [SubResource("InputEventKey_x4qdx")]

[sub_resource type="InputEventKey" id="InputEventKey_a5b8j"]
device = -1
keycode = 57
unicode = 57

[sub_resource type="Shortcut" id="Shortcut_uumch"]
events = [SubResource("InputEventKey_a5b8j")]

[sub_resource type="InputEventKey" id="InputEventKey_glou3"]
device = -1
keycode = 48
unicode = 48

[sub_resource type="Shortcut" id="Shortcut_akluy"]
events = [SubResource("InputEventKey_glou3")]

[node name="DialogButton" type="Button" node_paths=PackedStringArray("_container", "_index", "_description")]
custom_minimum_size = Vector2(45, 31)
offset_right = 333.0
offset_bottom = 514.0
shortcut = SubResource("Shortcut_4452u")
flat = true
script = ExtResource("1_smxr3")
_container = NodePath("MarginContainer")
_index = NodePath("MarginContainer/HBoxContainer/Index")
_description = NodePath("MarginContainer/HBoxContainer/Description")
_shortcuts = Array[Shortcut]([SubResource("Shortcut_4452u"), SubResource("Shortcut_fg3ec"), SubResource("Shortcut_5aiqg"), SubResource("Shortcut_ypkvd"), SubResource("Shortcut_o3aia"), SubResource("Shortcut_jht22"), SubResource("Shortcut_2q0j8"), SubResource("Shortcut_giagg"), SubResource("Shortcut_uumch"), SubResource("Shortcut_akluy")])
metadata/_custom_type_script = "uid://1rnnvyy1byjt"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Index" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
text = "1."
horizontal_alignment = 2
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Hide in the shipwreck."
fit_content = true
scroll_active = false
script = ExtResource("2_g8jf2")
metadata/_custom_type_script = "uid://rbc1te7wgcy0"

[connection signal="button_down" from="." to="." method="_update_font_colors"]
[connection signal="button_up" from="." to="." method="_update_font_colors"]
[connection signal="focus_entered" from="." to="." method="_update_font_colors"]
[connection signal="focus_exited" from="." to="." method="_update_font_colors"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="minimum_size_changed" from="MarginContainer" to="." method="_on_container_minimum_size_changed"]
[connection signal="finished_typing" from="MarginContainer/HBoxContainer/Description" to="." method="_on_description_finished_typing"]
